other-mpol/disable-automountserviceaccounttoken/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: disable-satokenmount-ns
