other-mpol/disable-automountserviceaccounttoken/.chainsaw-test/sa.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: foo-sa
  namespace: disable-satokenmount-ns
