other-mpol/disable-automountserviceaccounttoken/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disable-automountserviceaccounttoken
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disable-automountserviceaccounttoken.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: sa.yaml
  - name: step-03
    try:
    - assert:
        file: sa-patched.yaml
    - error:
        file: sa-not-patched.yaml
  - name: step-04-exception
    try:
    - apply:
        file: policy-exceptions-namespace.yaml
    - apply:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: PolicyException
          metadata:
            name: automount-exception
            namespace: policy-exceptions
          spec:
            policyRefs:
            - name: disable-automountserviceaccounttoken
              kind: MutatingPolicy
            matchConditions:
            - name: exact-serviceaccount
              expression: object.metadata.namespace == 'disable-satokenmount-ns' && object.metadata.name == 'default'
    - sleep: {duration: 15s}
    - apply:
        resource:
          apiVersion: v1
          kind: ServiceAccount
          metadata:
            name: default
            namespace: disable-satokenmount-ns
          automountServiceAccountToken: true
    - assert:
        resource:
          apiVersion: v1
          kind: ServiceAccount
          metadata:
            name: default
            namespace: disable-satokenmount-ns
          automountServiceAccountToken: true
